--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAMES HERE"
+title: "A SP500 Visualizer"
+author: "Nathan Ho"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
