--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -2,5 +2,20 @@
 
 ## Research topic
 
+My research will focus on the "meme stock" craze that has been going on the past year. Tickers such as Gamestop (GME) and AMC (AMC) have been in the forefront of retail investor's minds. This project explores how well these stocks actually perform; it is easy to do this by tracking individual stocks, but investors almost never put their entire portfolio into a single stock; instead, they diversify their holdings to reduce risk of volatility. Therefore, to test whether these "wallstreetsbets" investors truly have an alpha (i.e. an edge) on the overall market, we simulate their positions by creating a "meme index" that buys all these different stocks and aggregates them under a single mock ETF (exchange-traded fund). We will visualize this ETF in a number of ways, and additionally add interactivity by letting the user drag a sliding bar that will show how the ETF performs daily, as well as how the stocks/components within change using a daily frequency.
+
 ## Data availability
 
+Identify one or more data sources (see II. D. above) that you propose to draw on for the project. For each, describe how the data are collected and by whom. Describe the format of the data, the frequency of updates, and any other relevant information. Carefully document your sources with links. Explain how you plan to import the data.
+
+There are plenty of datasets available for us to get started on our project. We first have GME, whose daily closing prices can be found from https://finance.yahoo.com/quote/GME/history?p=GME. This dataset is a clean dataset since we are guaranteed to have no NaN and no outliers. The format of the data is Date, Open, High, Low, Close, Adjusted Close, and Volume. We will be primarily focused on the past year's worth of daily close prices from this dataset, of which it contains all data points necessary. The data is scraped from the daily opening price, the closing price, and the recorded high and low prices per trading day. All of this is collected by Yahoo Finance.
+
+Another dataset that we will use is AMC. The dataset can be found from https://finance.yahoo.com/quote/AMC/history?p=AMC. This dataset is similar in structure to GME with the same column headings, data cleanliness (i.e. no missing prices, dates, etc.). Again, we will use the daily closing price for our project, which this dataset contains. The reason why we utilize this dataset is because AMC has been the second most popular stock amongst "meme investors". This data is also scraped daily by Yahoo News at the closing bell.
+
+The third dataset that we will use is BBBY, which can be found at the following link: https://finance.yahoo.com/quote/BBBY/history?p=BBBY. The format and cleanliness of the data is the same as the previous two, as well as the source and frequency of data scraped. The reason why we use BBBY is because it gained humongous popularity during August/September when it spiked by 400-500%.
+
+The fourth dataset that we will utilize is TLRY, which can be found at the following link: https://finance.yahoo.com/quote/TLRY/history?p=TLRY. This stock has the same column headings and formatting as the previous stocks, and also comes from the same source with a daily frequency. The reason why we utilize this dataset is because it was also another meme stock that gained notoriety shortly after GME and AMC.
+
+The fifth dataset that we include in this list is Palantir Technologies (PLTR). The ticker price from the past year can be found at the following link ://finance.yahoo.com/quote/PLTR/history?p=PLTR. Column headings, formatting, and data cleanliness is the same as the previous datasets. The reason why we utilize this dataset is because the stock gained huge popiularity throughout COVID-19 because of its business model took advantage of the lockdowns. Even after those restrictions were lifted, meme investors have continued to talk about the stock, hence its continued popularity today.
+
+Although these five datasets would be sufficient to making a good index, we plan on including additional meme stocks over the next day or two to diversify our portfolio and to align our ETF to mirror meme stock investors' portfolios more accurately. Yahoo Finance provides an API that lets us download the datasets (All of these prices will take the last 251 trading days, or past year of trading), in which we will utilize Python to clean the datasets before piping them into RStudio for visualization.
