--- a/data_elie.Rmd
+++ b/data_elie.Rmd
@@ -6,7 +6,7 @@ As explained in the proposal we will work with financial meme stocks. The stocks
 We will use the following packages for getting the data : 
 
 ```{r}
-list.of.packages <- c("quantmod", "tidyquant","pylr","dplyr","redav","tidyverse", "remotes","naniar", "rollRegres")
+list.of.packages <- c("quantmod", "tidyquant","pylr","dplyr","redav","tidyverse", "remotes","naniar", "rollRegres", "zoo")
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
 if(length(new.packages)) install.packages(new.packages)
 remotes::install_github("jtr13/redav")
@@ -21,6 +21,7 @@ library(dplyr)
 library(redav)
 library(naniar)
 library(rollRegres)
+library(zoo)
 ```
 We need to specify during which period we want the data : 
 
@@ -35,6 +36,7 @@ getSymbols("AMC", src = "yahoo",from = start_date,to = end_date)
 getSymbols("BBBY", src= "yahoo",from = start_date,to = end_date)
 getSymbols("TLRY.TO", src= "yahoo", from = start_date,to = end_date)
 getSymbols("PLTR", src= "yahoo", from = start_date,to = end_date)
+getSymbols("SPY", src = "yahoo", from = start_date, to = end_date)
 ```
 
 Let's see what values does the quantmod packages returns. 
@@ -58,6 +60,7 @@ amc <- as_tibble(AMC)
 bbby <- as_tibble(BBBY)
 tlry <- as_tibble(TLRY.TO)
 pltr <- as_tibble(PLTR)
+spy <- as_tibble(SPY)
 ```
 
 ```{r}
@@ -78,7 +81,8 @@ amc <- amc %>% mutate(Date=DATE,.before=AMC.Open)
 gme <- gme %>% mutate(Date=DATE,.before=GME.Open) 
 bbby <- bbby %>% mutate(Date=DATE,.before=BBBY.Open)
 tlry <- tlry %>% mutate(Date=DATE,.before=TLRY.TO.Open) 
-pltr <- pltr %>% mutate(Date=DATE,.before=PLTR.Open) 
+pltr <- pltr %>% mutate(Date=DATE,.before=PLTR.Open)
+spy <- spy %>% mutate(Date=DATE,.before=SPY.Open)
 ```
 
 
@@ -95,6 +99,7 @@ sum(is.na(amc))
 sum(is.na(bbby))
 sum(is.na(tlry))
 sum(is.na(pltr))
+sum(is.na(spy))
 ```
 
 There are no missing values in our stocks which is good for our data vizualisation pipeline.
@@ -106,13 +111,14 @@ gme_return <- gme %>% mutate(GME.Return=(GME.Close-GME.Open)/(GME.Open))
 bbby_return <- bbby %>% mutate(BBBY.Return=(BBBY.Close-BBBY.Open)/(BBBY.Open)) 
 tlry_return <- tlry %>% mutate(TLRY.TO.Return=(TLRY.TO.Close-TLRY.TO.Open)/(TLRY.TO.Open))
 pltr_return <- pltr %>% mutate(PLTR.Return=(PLTR.Close-PLTR.Open)/(PLTR.Open))
+spy_return <- spy %>% mutate(SPY.Return=(SPY.Close-SPY.Open)/(SPY.Open))
 ```
 
 ```{r}
 head(gme)
 ```
 
-We can also calculate the rolling beta and alpha of a stock as well. This will be important, as beta tells us how an individual stock performs relative to the market, while alpha tells us the stock's excess return. We use a rolling window of 30. The following code creates this into one neat table:
+We can also calculate the rolling beta and alpha of a stock as well. This will be important, as beta tells us how an individual stock performs relative to the market, while alpha tells us the stock's excess return. We use a rolling window of 30. We also get the simple moving average (SMA) of our newly created portfolio to detected long-term trends. Finally, we calculate RSI (we base our code off this website: https://bookdown.org/kochiuyu/technical-analysis-with-r-second-edition2/relative-strength-index-rsi.html) to compare the performance of our portfolio with the SP500. The following code creates all of the data we need to create this data:
 
 ```{r}
 gme_close <- gme %>% pull(GME.Close)
@@ -120,13 +126,43 @@ amc_close <- amc %>% pull(AMC.Close)
 bbby_close <- bbby %>% pull(BBBY.Close)
 tlry_close <- tlry %>% pull(TLRY.TO.Close)
 pltr_close <- pltr %>% pull(PLTR.Close)
-close_prices <- tibble(gme_close, amc_close, bbby_close, tlry_close, pltr_close)
-close_prices <- log(close_prices)
-beta_regression<-roll_regres(gme_close ~ pltr_close, close_prices, width = 30,
+spy_close <- spy %>% pull(SPY.Close)
+close_prices <- data.frame(gme_close, amc_close, bbby_close, tlry_close, pltr_close)
+portfolio_close <- log(rowSums(close_prices))
+spy_close <- log(spy_close)
+beta_comparison <- data.frame(portfolio_close, spy_close)
+beta_regression<-roll_regres(portfolio_close ~ spy_close, beta_comparison, width = 30,
             do_compute = c("sigmas", "r.squareds", "1_step_forecasts"))
-head(beta_regression)
+portfolio_moving_average <- rollmean(portfolio_close, k=30, fill=NA)
+spy_moving_average <- rollmean(spy_close, k=30, fill = NA)
 ```
 
+```{r}
+myRSI <- function (price,n){
+  N <- length(price)
+  U <- rep(0,N)
+  D <- rep(0,N)
+  rsi <- rep(NA,N)
+  Lprice <- Lag(price,1)
+  for (i in 2:N){
+    if (price[i]>=Lprice[i]){
+      U[i] <- 1
+    } else {
+      D[i] <- 1
+    }
+    if (i>n){
+      AvgUp <- mean(U[(i-n+1):i])
+      AvgDn <- mean(D[(i-n+1):i])
+      rsi[i] <- AvgUp/(AvgUp+AvgDn)*100 
+      }
+    }
+  rsi <- reclass(rsi, price)
+  return(rsi)
+}
+
+portfolio_rsi <- myRSI(portfolio_close, n=14)
+spy_rsi <- myRSI(spy_close, n=14)
+```
 We now have all the required informations for starting our data vizualisation!
 
 ## Missing Value Analysis
@@ -134,15 +170,16 @@ We now have all the required informations for starting our data vizualisation!
 Although we have covered that there is missing data, we can visualize it by using a missing pattern graph, which can be found below.Please note that for the purposes of finding missing data, we merge the datasets to see if their are overarching patterns in the missing data.
 
 ```{r}
-total_data <- join_all(list(gme,amc,bbby,tlry,pltr), type='left')
+total_data <- join_all(list(gme,amc,bbby,tlry,pltr, spy), type='left')
 plot_missing(total_data, percent = FALSE)
 ```
 Although the labels are messy, one thing is clear: every single column is a complete case, which means that we do not have missing data throughout all our columns in all of our different stocks. We can also have an alternate view by using a heatmap of missing views:
 ```{r}
 vis_miss(total_data)
-
 ```
 Again, we see that out of all our observations, all of them are present, signifying that there are no missing values in our data.
+
+
 
 
 
