--- a/nate_r.Rmd
+++ b/nate_r.Rmd
@@ -1,6 +1,6 @@
 #Initial Portfolio
 
-The way that we set our portfolio is that we take one share of each stock that we have chosen and aggregate it into 
+The way that we set our portfolio is that we take one share of each stock that we have chosen and aggregate it into a single portfolio. 
 ```{r}
 head(amc)
 ```
