--- a/data_elie.Rmd
+++ b/data_elie.Rmd
@@ -6,7 +6,7 @@ As explained in the proposal we will work with financial meme stocks. The stocks
 We will use the following packages for getting the data : 
 
 ```{r}
-list.of.packages <- c("quantmod", "tidyquant","pylr","dplyr","redav","tidyverse", "remotes","naniar", "rollRegres", "zoo", "plotly")
+list.of.packages <- c("quantmod", "tidyquant","pylr","dplyr","redav","tidyverse", "remotes","naniar", "rollRegres", "zoo", "plotly", "tseries")
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
 if(length(new.packages)) install.packages(new.packages)
 remotes::install_github("jtr13/redav")
@@ -23,6 +23,7 @@ library(naniar)
 library(rollRegres)
 library(zoo)
 library(plotly)
+library(tseries)
 ```
 We need to specify during which period we want the data : 
 
@@ -133,8 +134,7 @@ portfolio_close <- rowSums(close_prices)
 portfolio_close_log <- log(portfolio_close)
 spy_close_log <- log(spy_close)
 beta_comparison <- data.frame(portfolio_close_log, spy_close_log)
-beta_regression<-roll_regres(portfolio_close_log ~ spy_close_log, beta_comparison, width = 30,
-            do_compute = c("sigmas", "r.squareds", "1_step_forecasts"))
+beta_regression<-roll_regres(portfolio_close_log ~ spy_close_log, beta_comparison, width = 30)
 portfolio_moving_average <- rollmean(portfolio_close, k=30, fill=NA)
 spy_moving_average <- rollmean(spy_close, k=30, fill = NA)
 ```
