--- a/results.Rmd
+++ b/results.Rmd
@@ -1,5 +1,6 @@
 # Results
 
+## Comparing the Portfolio to the Market
 
 The way that we set our portfolio is that we take one share of each stock that we have chosen and aggregate it into a single portfolio. Let us examine a brief overview of how our stock has performed in the past two years through the following candlestick chart:
 
@@ -28,6 +29,8 @@ fig
 ```
 
 When looking at the two graphs, there are two big trends; notably, there is a big downtrend in price for both our portfolio and the market in general. It is easier to track this big downtrend when comparing the simple moving average (SMA, or the black line) of the two different stocks. The magnitude of these changes, however, is significant. While the S&P500 dropped approximately 25%, our new index dropped a whopping 63%. This my show that long-term investment in meme stocks may not be the best financial strategy for this year. The other trend is that there were two spikes upward in price for both our portfolio and the S&P500; these are in relation to Q1 and Q2 results from major companies, all of which were struggling to show good results due to supply chain shortage. In addition, portfolio managers shift a lot of money during this quarter, which could contribute to the increased volatility in both March and August. In this case, the S&P500 spiked by about 10% and 12% respectively; however, our meme stocks outperformed, spiking up a hefty 90% and 65%, respectively. Therefore, short-term or swing traders might have more profitable trades if playing for volatility.
+
+## RSI Market Comparison
 
 Although candlesticks are a good overview for both portfolios, it is hard to see overall trends even with the simple moving average. Therefore, to see longer-term trends, we can use the relative strength index (RSI) which indicates the relative strength of the price of the stock. We plot the RSI of our new portfolio, as well as the SPY as a point of comparison.
 
@@ -72,6 +75,8 @@ fig
 
 This graph is an important alternative look to the previous histogram, as it benefits short-term/swing traders more than long-term investors. There are several important trends to point out in this graph. We see that, while the spread of RSI buy/sell signals was more spread out for our meme stock index, the number of buy signals is a lot more frequent than the S&P500 (most notably in May, where there was a strong buy signal for 4 straight weeks!). Therefore, swing traders might benefit more from the meme stock index because the frequency and length of these buy signals. On the other hand, S&P500 signals to buy are very few and far between (i.e. in March, June, and December), which may not benefit swing traders looking to make it rich quick. On the other hand, the S&P only reached a sell signal once (in April), it was relatively mild and barely triggered with a score near 70. The story for the meme stock, on the other hand, is that when losses occur, they are big. When reaching overbought territory, RSI scores hit 79 and 93 respectively, which is nearly unheard of for big indexes and ETFs. With the right strategies (such as buying put options or shorting stock), swing traders can also profit off of these sell signals deep in the red. Therefore, we can conclude from this graph that, while holding throughout the year may result in better profitability for long-term investors, the right enter and exit strategies throughout the year (and a lot of luck) would actually result in higher returns for swing traders.
 
+## Analyzing Alpha and Beta
+
 Finally, we can see how our portfolio's alpha beta compares with the SPY. Because we utilize the SPY as our benchmark, we do not plot the SPY beta in this graph (i.e. it will always be one for beta, and zero for alpha).
 
 ```{r}
@@ -83,6 +88,8 @@ fig
 ```
 
 When looking at the Beta and Alpha graph, the average investor would be slightly nervous, and rightly so. The beta is always above 1, and hovers between a value of 0.7 and 6. This means that our index is 0.7-6 times more volatile than the general market, which means any money invested has greater potential to gain or lose throughout the year due to high volatility. Generally, the higher the beta (and the greater the range of beta), the greater the risk+reward is compared to the general market. Although this may be good news for high-risk traders, the trade off may not be worth it. Generally, an alpha above 0 means that the stock performed relatively well compared to what the volatility of the stock predicted (for more information, please read on the CAPM model, of which this analysis is based). 0 means that it performed to expectation, and negative means it performed poorly to expectations. Our meme index firmly falls in this final category, with an alpha value as low as -34, which is nearly unattainable even for individual stocks, which typically have the highest beta, and therefore alpha, ranges. Therefore, both long-term traders and swing traders should stay far away from the index that we have generated, as returns for alpha very rarely reaches positive territory.
+
+## Correlation Matrices
 
 As we have seen in class, it could be interesting to plot the correlation matrix for the closes prices and for the daily returns of our stocks. These charts could reveal a global dynamic for the meme stocks :
 
@@ -164,7 +171,7 @@ v <- volume_2 %>%
 v
 ```
 
-#Problem of the order of the months to fix 
+## Volume Analysis
 
 ```{r}
 months <- c("Jan_2022","Feb-2022","Mar-2022","Apr-2022","May-2022","Jun-2022","Jul-2022","Aug-2022","Sep-2022","Oct-2022","Nov-2022","Dec-2022")
@@ -227,7 +234,7 @@ final_market_cap_2
 
 months <- c("Jan_2022","Feb-2022","Mar-2022","Apr-2022","May-2022","Jun-2022","Jul-2022","Aug-2022","Sep-2022","Oct-2022","Nov-2022","Dec-2022")
 ```
-
+## Market Cap Analysis
 
 ```{r}
 ggplot(final_market_cap_2, aes(fill=stock, y=Market_Cap, x=Month))+ 
